test/fail/ifex21.v3
//@seman
def x = if(false, "string", [0]);
